--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	display: flex;
-	align-items: center;
+	justify-content: center;
 	background-color: #C2C2C2;
 
 }
