--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,13 +1,11 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  align-items: center;
+  justify-content: center;
   min-height: 100vh;
   max-width: 1400px;
   width: 1400px;
-  align-self: center;
 
   @media(max-width:1399px){
     width: 100vw;
