--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,11 @@ time, mark, audio, video {
 	font-size: 62.5%;
 	font: inherit;
 	vertical-align: baseline;
+	text-decoration: none;
 	/* font-family: "Montserrat", sans-serif; */
+}
+a{
+	color: inherit
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
